--- a/css/ctm_style.css
+++ b/css/ctm_style.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 
 
 /*HOME*/
@@ -61,18 +60,40 @@ ul.dropdown-menu {
 .theme-btn a:hover {
 	background:  #445c7f;
 	text-decoration: none;
-=======
-
-
-/*HOME*/
-
-.benefit .service_grid .fa {
-	float: left;
-	font-size: 60px;
-	margin:  0 .5em 0 0;
-	color: #1BBC9B;
 }
-.benefit .service_grid .fa-inc-left {
-	margin:  0 .7em 0 .2em;
->>>>>>> origin/master
+
+
+.billing {
+	padding: 70px 0;
+}
+.billing-info {
+	border: 1px solid #ddd;
+	padding: 10px;
+}
+.billing-info .tz-title-5 p:after {
+	margin-left: 0;
+	left: 0;
+}
+.form-billing {
+	padding: 50px 20px;
+	background: #1BBC9B;
+	color: #fff;
+}
+
+.form-billing h3 {
+	margin-bottom: 0px;
+	font-size: 30px;
+}
+.form-billing h4 {
+	margin-bottom: 0;
+}
+.input-panel {
+	padding: 30px;
+	background: #fafafa;
+}
+.input-panel p {
+	padding: 10px 0;
+	font-size: 13px;
+	letter-spacing: .4s;
+	color: #666;
 }
