--- a/css/ctm_style.css
+++ b/css/ctm_style.css
@@ -17,16 +17,7 @@
 	padding-top: 80px;
 }
 
-ul.dropdown-menu {
-	border-bottom: none;
-	margin-top: 12px;
-}
-.droplink {
-	color: #666 !important;
-}
-.droplink:hover {
-	color: #fff !important;
-}
+
 
 .flexslider .slides img {
 	width: 100% !important;
@@ -126,4 +117,53 @@ ul.charge {
 span.m_12,
 span.m_11 {
 	font-size: 17px;
+}
+
+.payment-item {
+	float: left;
+	text-align: center;
+	margin-left: 20px;
+}
+.payment-item  img{
+	display: block;
+}
+.promocode {
+	padding: 0;
+}
+.checkpromocode {
+	padding: 8px 30px;
+	background: none;
+	border: none;
+}
+
+
+.h_menu4 .caret {
+	margin-left: 10px;
+}
+
+.h_menu4 .dropdown-menu {
+	border-bottom: none;
+	margin-top: 14px;
+	background: #445c7f;
+	
+	
+	border: none;
+	border-radius: 0;
+}
+.h_menu4 .dropdown-menu li a {
+	text-transform: uppercase;
+	border: none;
+	color: #fff !important; 
+	border-radius: 0;
+}
+.h_menu4 .dropdown-menu li:nth-child(1) a{
+	border-bottom: 2px solid rgba(255,255,255,0.5);
+}
+.h_menu4 .dropdown-menu li a:hover {
+	color: #fff !important;
+	background: #1BBC9B	;
+}
+
+.resellernews {
+	padding: 47.5px 0;
 }
