--- a/style.css
+++ b/style.css
@@ -428,6 +428,116 @@ ol.carousel-indicators {
 	margin-bottom: 135px;
 }
 
+
+/*CONTACT SECTION*/
+.contact {
+	padding: 110px 0;
+	background: #fff;
+	font-family: "Source Sans Pro";
+}
+.contact h4 {
+	color: #434343;
+	font-size: 24px;
+	font-weight: bold;
+	margin-bottom: 38px;
+
+}
+.input-textbox {
+	font-size: 16px;
+	font-weight: 300;
+	color: #636262;
+	width: 100%;
+	letter-spacing: .5px;
+	padding: 15px 20px;
+	border: 1px solid #dadada;
+	margin-bottom: 15px;
+	transition: all .4s ease;
+}
+.input-textbox:focus {
+	color: #6dc0d5;
+	border: 1px solid #6dc0d5;
+	box-shadow: none;
+}
+.btn-submit {
+	width: 100%;
+	padding: 15px;
+	text-align: center;
+	font-size: 16px;
+	font-weight: 600;
+	box-shadow: none;
+	border: none;
+	color: #fff;
+	letter-spacing: 1px;
+	background: #6dc0d5;
+	transition: all .4s ease;
+}
+.btn-submit:hover  {
+	background: #58b3ca;
+}
+
+.contact-greeting {
+	font-size: 16px;
+	line-height: 24px;
+	color: #636262;
+	font-weight: 300;
+	letter-spacing: .5px;
+	word-spacing: 1px;
+	margin-bottom: 40px;
+}
+.contact h6 {
+	font-size: 20px;
+	font-weight: 600;
+}
+.detail {
+	margin-top: -20px;
+}
+.address {
+	font-size: 18px;
+	letter-spacing: .5px;
+	font-weight: 400;
+	color:  #b1b1b1;
+	margin-bottom: 0;
+} 
+.inline {
+	color: #b1b1b1;
+	font-size: 18px;
+	display: inline-block;
+	font-weight: 400;
+	margin-right: 30px;
+} 
+.email {
+	display: inline-block;
+	color: #6dc0d5;
+}
+
+/*footer*/
+footer {
+	padding: 75px 0;
+	background: #e8faff;
+	font-family: "Source Sans Pro";
+}
+footer ul {
+	padding: 0;
+}
+footer ul li {
+	list-style: none;
+	display: inline-block;
+}
+footer p {
+	text-align: center;
+	color: #68a3b5;
+	font-size: 18px;
+	letter-spacing: 1px;
+}
+.social {
+	text-align: center;
+	margin-bottom: 25px;
+}
+.social-icon {
+	width: 25px;
+	height: 25px;
+	margin: 0 20px;
+}
 .hideme
 {
     opacity:0;
