--- a/fonts/styles.css
+++ b/fonts/styles.css
@@ -1,7 +1,7 @@
 
 @font-face {
-  font-family: 'Rubik-Light';
-  src: url('Rubik-Light.eot?#iefix') format('embedded-opentype'),  url('Rubik-Light.woff') format('woff'), url('Rubik-Light.ttf')  format('truetype'), url('Rubik-Light.svg#Rubik-Light') format('svg');
+  font-family: 'Rubik-Regular';
+  src: url('Rubik-Regular.eot?#iefix') format('embedded-opentype'),  url('Rubik-Regular.woff') format('woff'), url('Rubik-Regular.ttf')  format('truetype'), url('Rubik-Regular.svg#Rubik-Regular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
